# proto-coro

./: .clang-format  CMakeLists.txt  ctx.hpp  main.cpp  pc.hpp  rt.hpp
.github/workflows/: ci.yml
aux/: CMakeLists.txt
aux/falter/: CMakeLists.txt
aux/falter/include/falter/: interface.hpp
aux/falter/src/: falter.cpp  macros.hpp  stats.cpp
cmake/: Flags.cmake
event-loop/: event-loop.hpp  mpmc-queue.hpp  mpsc-timer-queue.hpp
examples/: CMakeLists.txt  http_server.cpp  proto_coro_demo.cpp
include/proto-coro/: routine.hpp
include/proto-coro/event-loop/: event-loop.hpp  mpsc-timer-queue.hpp
lib/proto-coro/: concur-util.hpp  fast-pimpl.hpp  pc.hpp  rt.hpp  unused.hpp
lib/proto-coro/event-loop/: epoll.cpp  epoll.hpp  event-loop.cpp  event-loop.hpp  fail.cpp  fail.hpp  mpmc-queue.hpp  owned-fd.hpp  registered-fd.hpp
lib/proto-coro/thread/: event.hpp
scripts/: query.py
tests/: CMakeLists.txt  test-pc-basic.cpp  test-pc.cpp  test-sleep-yield.cpp
